--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kodluyoruz</title>
+    <title>Hakkımızda|Kodluyoruz</title>
 </head>
 <body>
 
@@ -32,9 +32,9 @@
 <section>
     <!--Article - Start-->
     <article>
-        <h2>Birinci Yazı</h2>
+        <h2>Hakkımızda</h2>
 
-        <img height="300" src="image.jpg/michal-kubalczyk-WecngmAT-KY-unsplash.jpg" alt="Yazı 1 ">
+        <img src="https://picsum.photos/id/410/200/300" alt="Yazı 1 ">
 
         <p>Lorem ipsum dolor sit amet
              consectetur adipisicing elit. 
@@ -53,43 +53,7 @@
 
     </article>
 
-    <article>
-        <h2>İkinci Yazı</h2>
-
-        <img src="https://picsum.photos/id/531/200/300" alt="Yazı 1 ">
-
-        <p>Lorem ipsum dolor sit amet
-             consectetur adipisicing elit. 
-            Reprehenderit, molestias.</p>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Culpa consequatur quibusdam ipsam laboriosam!</p>
-            <p>Iusto modi laudantium possimus ducimus!</p>
-
-            <ul>
-                <li>Lorem ipsum dolor sit.</li>
-                <li>Praesentium ipsam cumque dolore.</li>
-                <li>Labore impedit cum exercitationem.</li>
-                <li>Iure facere dignissimos mollitia.</li>
-            </ul>
-
-            <hr>
-    </article>
-
-
-    <article>
-        <h2>Üçüncü Yazı</h2>
-
-        <img src="https://picsum.photos/id/137/200/300" alt="Yazı 1 ">
-
-        <p>Lorem ipsum dolor sit amet
-             consectetur adipisicing elit. 
-            Reprehenderit, molestias.</p>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Culpa consequatur quibusdam ipsam laboriosam!</p>
-            <p>Iusto modi laudantium possimus ducimus!</p>
-
-            <hr>
-    </article>
+   
     <!--Article - End-->
 </section>
 <!--Content - End-->
